# dalre

./: .gitignore  Cargo.toml  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json  workspace.json
apps/browser/: jest.config.ts  project.json  webpack.config.js
apps/browser-e2e/: cypress.json  project.json
apps/browser/src/: index.html  styles.css
apps/browser/src/app/: app.spec.tsx  app.tsx  status-bar.module.css  status-bar.tsx
apps/browser/src/app/components/: canvas-panel.module.css  canvas-panel.tsx  split-view-item.module.css  split-view-item.tsx  split-view.module.css  split-view.tsx
apps/desktop/: project.json
apps/desktop/src/app/: app.ts  constants.ts
libs/core/: Cargo.toml  package.json  project.json  tsconfig.lib.json  webpack.config.js
libs/core/src/: lib.rs
libs/core/src/models/: document.rs  layer.rs  mod.rs
